add: pwa configuration

--- a/index.html
+++ b/index.html
@@ -33,9 +33,31 @@
     />
     <!-- <meta name="twitter:image" content="/og-image.png" /> -->
     <link rel="canonical" href="https://games.seungjuh.com/" />
+    
+    <!-- PWA 관련 메타 태그 -->
+    <meta name="theme-color" content="#2c3e50" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="Mini Games" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="apple-touch-icon" href="/thumbnail_games.png" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script>
+      // Service Worker 등록
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/service-worker.js')
+            .then(registration => {
+              console.log('ServiceWorker registration successful');
+            })
+            .catch(err => {
+              console.log('ServiceWorker registration failed: ', err);
+            });
+        });
+      }
+    </script>
   </body>
 </html>
